--- a/views/index.pug
+++ b/views/index.pug
@@ -4,9 +4,9 @@ block content
   h1 Hello MVC
   p Ingresá el ID del usuario que querés buscar.
   form.form-inline(action='/search' method='get')
-  div.form-group.mr-sm-3
-    input.form-control(type='text' name='id' placeholder='ID')
-  input.form-control.btn.btn-primary(type='submit' value='Buscar')
+    div.form-group.mr-sm-3
+      input.form-control(type='text' name='id' placeholder='ID')
+    input.form-control.btn.btn-primary(type='submit' value='Buscar')
   hr
   if users
     table.table.table-striped
@@ -28,4 +28,4 @@ block content
     h3 No hay resultados
   hr
   h4 Más info en
-    a(href='#') MDN
+    a(href='https://developer.mozilla.org/es/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website') MDN  
